create structure initial

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ napi = { version = "3.8.2", features = ["napi9", "async"] }
 napi-derive = "3.5.1"
 chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
+three-d = "0.18.2"
+winit = "0.28"
 
 [build-dependencies]
 napi-build = "2"
